# rpi4-minios

./: CMakeLists.txt  Makefile  README.md  mkfile  run.sh
include/: gpio.h  mbox.h
include/cmd/: autocomplete.h  cmd.h  cmd_history.h  color.h  constants.h
include/cmd/program/: clear.h  help.h  setcolor.h  showinfo.h  uartconf.h
include/error/: error_code.h
include/string/: string.h
include/uart/: config.h  uart0.h
include/utils/: size.h
link/: boot.S  link.ld
src/: kernel.c  mbox.c
src/cmd/: autocomplete.c  cmd.c  cmd_history.c  color.c
src/cmd/program/: clear.c  help.c  setcolor.c  showinfo.c  uartconf.c
src/error/: error_code.c
src/string/: string.c
src/uart/: config.c  uart0.c
